css/main.css
html {
	color: #222;
	font-size: 1em;
	line-height: 1.4;
}

::-moz-selection {
	background: #b3d4fc;
	text-shadow: none;
}

::selection {
	background: #b3d4fc;
	text-shadow: none;
}

h1,
h2,
h3 {
	color: #457397;
	display: inline;
}

#resume {
	font-size: 9px;
}

a {
	text-decoration: none;
	-o-transition:.5s;
	-ms-transition:.5s;
	-moz-transition:.5s;
	-webkit-transition:.5s;
	transition:.5s;
	opacity: .5;
	color: #0645AD;
}

a:hover {
	opacity: 1;
}

section p {
	margin-top: 1px;
}

.box {
	width: 5em;
	text-align: center;
	float: right;
	border: 1px solid #B4B4B4;
	padding: 1px 1px 1px 1px;
	background-color: #E6E7E9;
	margin-bottom: 4px;
	margin-left: 4px;
	padding-left: 2px;
	padding-right: 2px;
	border-left: 4px solid #8ABAE4
	-o-transition:.5s;
	-ms-transition:.5s;
	-moz-transition:.5s;
	-webkit-transition:.5s;
	transition:.5s;
	opacity: .6;
	color: black;
}

.box:hover {
	opacity: 1;
}

.header hr {
	display: block;
	height: 1px;
	border: 0;
	border-top: 1px solid #ccc;
	margin: 1em 0;
	padding: 0;
}

aside hr {
	display: block;
	height: 1px;
	border: 0;
	border-top: 1px solid #ccc;
}

audio,
canvas,
iframe,
img,
svg,
video {
	vertical-align: middle;
}

fieldset {
	border: 0;
	margin: 0;
	padding: 0;
}

textarea {
	resize: vertical;
}

.browserupgrade {
	margin: 0.2em 0;
	background: #ccc;
	color: #000;
	padding: 0.2em 0;
}

body {
	font: 16px/26px Helvetica, Helvetica Neue, Arial;
}

.wrapper {
	width: 90%;
	margin: 0 5%;
}

.header-container {
	border-bottom: 20px solid #A9A9A9;
}

.footer-container,
.main aside {
	border-top: 20px solid #A9A9A9;
}

.header-container,
.footer-container,
.main aside {
	background: #EFEFEF;
}

.main aside a {
	text-decoration: none;
}

.main aside #resume a {
	border-bottom: none;
	font-style: italic;
}

.title {
	color: white;
}


.main {
	padding: 30px 0;
}

.main article h1 {
	font-size: 2em;
}

.main aside {
	color: black;
	padding: 5px 5% 10px;
	margin-bottom: 2em;
}

.footer-container footer {
	color: black;
	padding: 20px 0;
}

.footer-container footer #source {
	float: right;
}

@media only screen and (min-width: 768px) {

	.header-container,
	.main aside {
		-webkit-box-shadow: 0 5px 10px #aaa;
		   -moz-box-shadow: 0 5px 10px #aaa;
				box-shadow: 0 5px 10px #aaa;
	}

	.title {
		float: left;
	}

	.main article {
		float: left;
		width: 57%;
	}

	.main aside {
		float: right;
		width: 28%;
	}
}

@media only screen and (min-width: 1140px) {

	.wrapper {
		width: 1026px; /* 1140px - 10% for margins */
		margin: 0 auto;
	}
}

.hidden {
	display: none !important;
	visibility: hidden;
}

.visuallyhidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
	clip: auto;
	height: auto;
	margin: 0;
	overflow: visible;
	position: static;
	width: auto;
}

.invisible {
	visibility: hidden;
}

.clearfix:before,
.clearfix:after {
	content: " ";
	display: table;
}

.clearfix:after {
	clear: both;
}

.clearfix {
	*zoom: 1;
}

